Project

General

Profile

Actions

Bug #22560

closed

segfault in ObjectCache::touch_lru()

Added by Casey Bodley over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

when running vstart.sh with RGW=1, the `radosgw-admin user create --uid testid` command crashes:

2018-01-03 14:10:38.479 7fb330ddb3c0 -1 *** Caught signal (Segmentation fault) **
 in thread 7fb330ddb3c0 thread_name:radosgw-admin

 ceph version Development (no_version) mimic (dev)
 1: (ceph::BackTrace::BackTrace(int)+0x45) [0x557e6ad46265]
 2: (()+0xabd2ed) [0x557e6ad452ed]
 3: (()+0x12a70) [0x7fb32ef5ea70]
 4: (std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >::operator=(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&&)+0x13) [0x7fb323a77d33]
 5: (std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >* std::__copy_move<true, false, std::random_access_iterator_tag>::__copy_m<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*>(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*)+0x4f) [0x557e6abe2776]
 6: (std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >* std::__copy_move_a<true, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*>(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*)+0x2f) [0x557e6abe2387]
 7: (std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >* std::__copy_move_a2<true, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*>(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*)+0x4f) [0x557e6abe1e62]
 8: (std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >* std::move<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*>(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*)+0x45) [0x557e6abe1600]
 9: (std::_Deque_iterator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*> std::move<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > >(std::_Deque_iterator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const*>, std::_Deque_iterator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const*>, std::_Deque_iterator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*>)+0xca) [0x557e6abe0b2a]
 10: (std::_Deque_iterator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*> std::move<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > >(std::_Deque_iterator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*>, std::_Deque_iterator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*>, std::_Deque_iterator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*>)+0x9a) [0x557e6abdf81f]
 11: (std::deque<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > >::_M_erase(std::_Deque_iterator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*>)+0x1e8) [0x557e6abde582]
 12: (std::deque<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > >::erase(std::_Deque_iterator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const*>)+0x46) [0x557e6abdd608]
 13: (ObjectCache::touch_lru(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, ObjectCacheEntry&, std::_Deque_iterator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*>&)+0x532) [0x557e6abdc120]
 14: (ObjectCache::put(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, ObjectCacheInfo&, rgw_cache_entry_info*)+0x36c) [0x557e6abdb1be]
 15: (RGWCache<RGWRados>::get_system_obj(RGWObjectCtx&, RGWRados::SystemObject::Read::GetObjState&, RGWObjVersionTracker*, rgw_raw_obj&, ceph::buffer::list&, long, long, std::map<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, ceph::buffer::list, std::less<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > >, std::allocator<std::pair<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const, ceph::buffer::list> > >*, rgw_cache_entry_info*, boost::optional<obj_version>)+0x51e) [0x557e6ab51928]


Related issues 1 (0 open1 closed)

Related to rgw - Bug #22517: Cache never becoming consistent after failed updatesResolvedAdam Emerson12/20/2017

Actions
Actions #1

Updated by Casey Bodley over 6 years ago

  • Description updated (diff)
Actions #2

Updated by Casey Bodley over 6 years ago

  • Status changed from New to In Progress
  • Assignee set to Casey Bodley
Actions #3

Updated by Matt Benjamin over 6 years ago

  • Status changed from In Progress to Pending Backport
Actions #4

Updated by Matt Benjamin over 6 years ago

  • Backport set to Luminous
Actions #5

Updated by Casey Bodley over 6 years ago

  • Status changed from Pending Backport to Resolved
  • Backport deleted (Luminous)

moving to resolved - see http://tracker.ceph.com/issues/22517 for backport tracker

Actions #6

Updated by Casey Bodley over 6 years ago

  • Related to Bug #22517: Cache never becoming consistent after failed updates added
Actions

Also available in: Atom PDF