rgw: change ObjectCache::lru from deque back to list

ObjectCacheEntry stores an lru_iter into this lru, and depends on that
iterator remaining valid as other entries are inserted/erased

Fixes: http://tracker.ceph.com/issues/22560

Signed-off-by: Casey Bodley <cbodley@redhat.com>