src/rgw/rgw_cache.cc
@@ -209,7 +209,7 @@ void ObjectCache::remove(string& name)
 }
 
 void ObjectCache::touch_lru(string& name, ObjectCacheEntry& entry,
-			    std::deque<string>::iterator& lru_iter)
+			    std::list<string>::iterator& lru_iter)
 {
   while (lru_size > (size_t)cct->_conf->rgw_cache_lru_size) {
     auto iter = lru.begin();
@@ -249,7 +249,7 @@ void ObjectCache::touch_lru(string& name, ObjectCacheEntry& entry,
 }
 
 void ObjectCache::remove_lru(string& name,
-			     std::deque<string>::iterator& lru_iter)
+			     std::list<string>::iterator& lru_iter)
 {
   if (lru_iter == lru.end())
     return;
